--- a/FormManager/Views/Form/Build.cshtml
+++ b/FormManager/Views/Form/Build.cshtml
@@ -16,7 +16,7 @@
         <div ng-controller="FormCtrl" >
             <fieldset data-ng-repeat="choice in choices" class="form-group">
                 <select class="form-control col-md-1">
-                    <option>Mobile</option>
+                    <option>Mobile option>
                     <option>Office</option>
                     <option>Home</option>
                 </select>
