--- a/FormManager/Views/Shared/_Layout.cshtml
+++ b/FormManager/Views/Shared/_Layout.cshtml
@@ -20,10 +20,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Menu", "Menu", "Form")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
+                @if (User.Identity.IsAuthenticated) { 
+                <ul class="nav navbar-nav navbar-right">
+                    <li>@Html.ActionLink("Logout", "LogOff", "Account")</li>
+                </ul>}
             </div>
         </div>
     </div>
